# ChangeLog for media-gfx/grub-splashes
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/grub-splashes/ChangeLog,v 1.10 2009/10/25 17:39:37 tove Exp $

  25 Oct 2009; Torsten Veller <tove@gentoo.org> metadata.xml:
  Remove welp from metadata.xml (#141007)

  11 Sep 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  grub-splashes-0.1.ebuild:
  Fix DEPEND/RDEPEND assignment.

  28 May 2008; Markus Meier <maekke@gentoo.org> grub-splashes-0.1.ebuild:
  amd64/x86 stable, bug #223487

  16 Jan 2008; Markus Meier <maekke@gentoo.org> grub-splashes-0.1.ebuild:
  make repoman happy

  24 Oct 2007; <welp@gentoo.org> grub-splashes-0.1.ebuild:
  Fix grammatical error in elog

  24 Oct 2007; <welp@gentoo.org> metadata.xml:
  Fixed metadata.xml

  20 Sep 2007; Peter Weller <welp@gentoo.org> grub-splashes-0.1.ebuild:
  Updated HOMEPAGE

  20 Sep 2007; Peter Weller <welp@gentoo.org> grub-splashes-0.1.ebuild:
  Use  when checking for /boot/grub

  04 Jul 2007; Peter Weller <welp@gentoo.org> ChangeLog:
  Initial import
