@@ -1,14 +1,17 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
+DIST 49074-natural_gentoo-8.0.tar.gz 278632 RMD160 50594e8049c3bc4063c2437ad35c2744e6499d11 SHA1 4933ed02f6e74039dabb33c77c4cdef890e7a20c SHA256 89c142d782a813af1fa39f1dcf5294a7b6cb12957eebb0c0a33b133b05b595e5
+DIST 98478-gentoo-splash.xpm.gz 18681 RMD160 f35d408240eaa440dc927846e2787c36595a8642 SHA1 cce6100630a9a156b5c991428a0530f91db9dbbe SHA256 c5ec10b98bd4d699e2a6e389ebce30c296ec1243efafcd16757116a2b20db2cd
 DIST grub-splashes-0.1.tar.gz 180413 RMD160 35f5633310591667d752b8d0e2a3eab7db0c7304 SHA1 74e5c565c1c941c9179c8379a3fe4f756ed1ad96 SHA256 a3f8e54e215315b91603300e20e2599e5ffcf34358427fe3417dbdf6b5cf74b5
 EBUILD grub-splashes-0.1.ebuild 1005 RMD160 abe164076b0afcfb84774e1f54ff42f0eac64186 SHA1 2bc61249cd271f2ee1b120c3ad34a197d5358507 SHA256 a4e24b9eb59b7c92086cbfc1556ce079a119b0ef603ae25d8492a8b4c0906f94
-MISC ChangeLog 1081 RMD160 683800a108f70082df00ba283f83a15e5874ac53 SHA1 a1d06901d660c558d6984063561c8ea7181d1965 SHA256 696900f95a3937052ce2887c5769cb5a7b505ef3c96d08ab968f6fe1332b3da5
+EBUILD grub-splashes-20091109.ebuild 1333 RMD160 a45661eb32e3f8ec7e8f2a7f7e3b9eb01fc3d6d1 SHA1 b49d5a97d081eb906a7a1c09d5335f6dc9ed7495 SHA256 ce5ed7f5d8638a93bcca6ce736f894d0ffb872f7157e7778acb8c8e12e7fc1d2
+MISC ChangeLog 1231 RMD160 05fae88ab58a519d1acbfa3cf3d1e5febb695049 SHA1 796d5c3b215278b1edb6b481fc2e08a05fe8900b SHA256 cb1b8f5ab73df4b6c522a8a5dd17bcafd8a8c17a3fc428f31dd8dfa8bff149d3
 MISC metadata.xml 280 RMD160 014b4399ba4d0792bd2ffb970020de0e5989843e SHA1 9d7f4a3b71ff9c245378ae1b4fc2bc19b84f15dd SHA256 a2c71640b694c875be8f3dda20460a38e3051e1ab2f3d27a2343e3092e16e386
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.11 (GNU/Linux)
+Version: GnuPG v2.0.13 (GNU/Linux)
 
-iEYEARECAAYFAkrkjV4ACgkQV3J2n04EauxljwCgnKytghxQYpQq1rIf9OBW0kcR
-hBMAnivAlJGcbBQnBirLfsNQWrd5A2et
-=ivz8
+iEYEARECAAYFAkr4IiwACgkQkKaRLQcq0GL2pwCgmjdMAH/REafsl9+XfT74ZenI
+4/wAnAkfpL8GQx1llyEa+qMXc0YFbLW0
+=fZ1C
 -----END PGP SIGNATURE-----
